// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`human errors should not warn about human errors if \`options.humanErrors\` is false 1`] = `
"● Compiling...
"
`;

exports[`human errors should stop reporting if stop was called 1`] = `
"● Compiling...
✔ Compilation succeeded (0ms)

     CLIENT                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset    Size
    foo.js   10Kb

     SERVER                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset    Size
    bar.js   10Kb

"
`;

exports[`human errors should warn about all human errors 1`] = `
"● Compiling...
WARN: Server \`output.target\` in webpack config should be set to \`node\`
See https://webpack.js.org/configuration/target/#target

WARN: Server \`output.libraryTarget\` in webpack config should be set to \`this\` or \`commonjs2\`
See https://webpack.js.org/configuration/output/#output-librarytarget

WARN: Server \`devtool\` in webpack config should be set to \`source-map\` or \`inline-source-map\`
In addition, you must use https://github.com/evanw/node-source-map-support to enable source maps.

WARN: The \`output.path\` should be the same in the webpack client & server configs
Client output.path: /build
Server output.path: /foo

WARN: The \`output.publicPath\` should be the same in the webpack client & server configs
Client output.publicPath: /build/
Server output.publicPath: /foo/

"
`;

exports[`should output the correct duration 1`] = `
"● Compiling...
✔ Compilation succeeded (0ms)

     CLIENT                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset    Size
    foo.js   10Kb

     SERVER                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset    Size
    bar.js   10Kb

● Compiling...
✔ Compilation succeeded (200ms)

     CLIENT                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset    Size
    foo.js   10Kb

     SERVER                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset    Size
    bar.js   10Kb

"
`;

exports[`should render the correct output on failure 1`] = `
"● Compiling...
✖ Compilation failed

    Error message
    - file1.js:1 method1
        /path/to/file1.js:1:0
      - file2.js:1 method2
        /path/to/file2.js:1:0

"
`;

exports[`should render the correct output on success 1`] = `
"● Compiling...
✔ Compilation succeeded (0ms)

     CLIENT                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset    Size
    foo.js   10Kb

     SERVER                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset    Size
    bar.js   10Kb

"
`;
